--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "build/index.js",
   "scripts": {
     "commit": "git-cz",
+    "commitmsg": "validate-commit-msg",
+    "lint": "tslint --project tsconfig.json --type-check",
+    "build": "run-s lint compile",
+    "compile": "tsc -p tsconfig.json",
     "watch": "tsc -w -p tsconfig.json",
-    "build": "tsc -p tsconfig.json",
-    "prepush": "npm run build",
-    "commitmsg": "validate-commit-msg"
+    "precommit": "npm run lint",
+    "prepush": "npm run build"
   },
   "bin": {
     "ngx-build-watch": "./build/scripts/watch.js",
@@ -33,8 +36,10 @@
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
     "husky": "^0.13.4",
+    "npm-run-all": "^4.0.2",
     "ts-node": "^3.0.6",
     "tslib": "^1.7.1",
+    "tslint": "^5.4.3",
     "typescript": "^2.3.4",
     "validate-commit-msg": "^2.12.2"
   },
