--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/rollup": "^0.41.0",
     "@types/yargs": "^6.6.0",
     "commitizen": "^2.9.6",
+    "conventional-changelog-cli": "^1.3.1",
     "cz-conventional-changelog": "^2.0.0",
     "husky": "^0.13.4",
     "npm-run-all": "^4.0.2",
