--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "commitmsg": "validate-commit-msg",
     "lint": "tslint --project tsconfig.json --type-check",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "build": "run-s lint compile",
+    "build": "run-s lint test:coverage compile",
     "compile": "tsc -p tsconfig.json",
     "watch": "tsc -w -p tsconfig.json",
+    "test": "mocha --opts mocha.opts",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage:run": "cross-env NODE_ENV=test nyc --extension .ts npm run test",
+    "test:coverage:check": "nyc check-coverage --statements 39 --branches 37 --functions 15 --lines 39",
+    "test:coverage": "run-s test:coverage:run test:coverage:check",
     "precommit": "npm run lint",
     "prepush": "npm run build",
     "version": "run-s build changelog && git add CHANGELOG.md",
@@ -30,21 +35,30 @@
   "license": "ISC",
   "repository": "dcsfuerth/ngx-build-tools",
   "devDependencies": {
+    "@types/chai": "^4.0.0",
     "@types/chokidar": "^1.7.0",
+    "@types/fs-extra": "^3.0.3",
     "@types/glob": "^5.0.30",
-    "@types/node": "^7.0.31",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.32",
     "@types/node-sass": "^3.10.32",
+    "@types/rimraf": "0.0.28",
     "@types/rollup": "^0.41.0",
     "@types/yargs": "^6.6.0",
+    "chai": "^4.0.2",
     "commitizen": "^2.9.6",
     "conventional-changelog-cli": "^1.3.1",
+    "cross-env": "^5.0.1",
     "cz-conventional-changelog": "^2.0.0",
+    "fs-extra": "^3.0.1",
     "husky": "^0.13.4",
+    "mocha": "^3.4.2",
     "npm-run-all": "^4.0.2",
+    "nyc": "^11.0.2",
     "ts-node": "^3.0.6",
     "tslib": "^1.7.1",
     "tslint": "^5.4.3",
-    "typescript": "^2.3.4",
+    "typescript": "^2.4.0",
     "validate-commit-msg": "^2.12.2"
   },
   "dependencies": {
@@ -55,7 +69,7 @@
     "glob": "^7.1.2",
     "node-sass": "^4.5.3",
     "postcss": "^6.0.2",
-    "pretty-error": "^2.1.0",
+    "pretty-error": "^2.1.1",
     "rollup": "^0.43.0",
     "yargs": "^8.0.2"
   },
