--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tools and helpers to support dev and production build of angular apps",
   "main": "build/index.js",
   "scripts": {
-    "commit": "git-cz",
+    "commit": "git cz",
     "commitmsg": "validate-commit-msg",
     "lint": "tslint --project tsconfig.json --type-check",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
@@ -35,43 +35,47 @@
   "license": "ISC",
   "repository": "dcsfuerth/ngx-build-tools",
   "devDependencies": {
-    "@types/chai": "^4.0.0",
-    "@types/chokidar": "^1.7.0",
-    "@types/fs-extra": "^3.0.3",
-    "@types/glob": "^5.0.30",
-    "@types/mocha": "^2.2.41",
+    "@angular/core": "^4.3.5",
+    "@types/chai": "^4.0.4",
+    "@types/chokidar": "^1.7.2",
+    "@types/fs-extra": "^4.0.0",
+    "@types/glob": "^5.0.32",
+    "@types/mocha": "^2.2.42",
     "@types/node": "^8.0.1",
     "@types/node-sass": "^3.10.32",
-    "@types/rimraf": "0.0.28",
-    "@types/rollup": "^0.41.0",
-    "@types/yargs": "^6.6.0",
-    "chai": "^4.0.2",
+    "@types/rimraf": "2.0.2",
+    "@types/rollup": "^0.41.1",
+    "@types/yargs": "^8.0.2",
+    "chai": "^4.1.1",
     "commitizen": "^2.9.6",
-    "conventional-changelog-cli": "^1.3.1",
-    "cross-env": "^5.0.1",
+    "conventional-changelog-cli": "^1.3.2",
+    "cross-env": "^5.0.5",
     "cz-conventional-changelog": "^2.0.0",
-    "fs-extra": "^3.0.1",
-    "husky": "^0.13.4",
-    "mocha": "^3.4.2",
+    "fs-extra": "^4.0.1",
+    "husky": "^0.14.3",
+    "mocha": "^3.5.0",
     "npm-run-all": "^4.0.2",
-    "nyc": "^11.0.2",
-    "ts-node": "^3.1.0",
+    "nyc": "^11.1.0",
+    "rollup": "^0.48.2",
+    "rxjs": "^5.4.3",
+    "ts-node": "^3.3.0",
     "tslib": "^1.7.1",
-    "tslint": "^5.4.3",
-    "typescript": "^2.4.0",
-    "validate-commit-msg": "^2.12.2"
+    "tslint": "^5.6.0",
+    "typescript": "^2.5.1",
+    "validate-commit-msg": "^2.14.0",
+    "zone.js": "^0.8.16"
   },
   "dependencies": {
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/core": "^4.2.4",
     "angular2-inline-template-style": "^1.1.0",
     "chokidar": "^1.7.0",
     "glob": "^7.1.2",
     "node-sass": "^4.5.3",
-    "postcss": "^6.0.2",
+    "postcss": "^6.0.9",
     "pretty-error": "^2.1.1",
-    "rollup": "^0.43.0",
     "yargs": "^8.0.2"
+  },
+  "peerDependencies": {
+    "rollup": "^0.48.2"
   },
   "config": {
     "commitizen": {
